--- a/DjvuApp.Universal/Controls/PageViewControl.xaml
+++ b/DjvuApp.Universal/Controls/PageViewControl.xaml
@@ -4,38 +4,27 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:controls="using:DjvuApp.Controls"
     mc:Ignorable="d"
-    Unloaded="UnloadedHandler"
-    PointerMoved="PointerMovedHandler">
+    Unloaded="UnloadedHandler">
     
-    <UserControl.Resources>
-        <SolidColorBrush x:Key="ReaderCanvasForeground" Color="White"/>
-        <SolidColorBrush x:Key="SearchHighlightingBackgroundBrush" Color="Yellow" Opacity="0.33"/>
-        <SolidColorBrush x:Key="SelectionBackgroundBrush" Color="{ThemeResource SystemAccentColor}" Opacity="0.33"/>
-    </UserControl.Resources>
-
     <Canvas Background="Transparent">
-        <Canvas 
-            x:Name="blankContentCanvas"
-            Width="{x:Bind Width, Mode=OneWay}" 
-            Height="{x:Bind Height, Mode=OneWay}"
-            Background="{StaticResource ReaderCanvasForeground}"/>
         <Canvas 
             x:Name="thumbnailContentCanvas"
             Width="{x:Bind Width, Mode=OneWay}" 
             Height="{x:Bind Height, Mode=OneWay}"
-            Background="Transparent"/>
+            Background="White"/>
         <Canvas 
             x:Name="contentCanvas"
             Width="{x:Bind Width, Mode=OneWay}" 
             Height="{x:Bind Height, Mode=OneWay}"
             Background="Transparent"/>
-        <Canvas
-            x:Name="selectionCanvas"
-            Width="0"
-            Height="0">
-            <Path x:Name="searchHighlightingShape" Fill="{StaticResource SearchHighlightingBackgroundBrush}"/>
-            <Path x:Name="selectionShape" Fill="{StaticResource SelectionBackgroundBrush}"/>
-        </Canvas>
+        <controls:TextLayerControl
+            x:Name="textLayerControl"
+            Width="{x:Bind Width, Mode=OneWay}" 
+            Height="{x:Bind Height, Mode=OneWay}"
+            State="{x:Bind State, Mode=OneWay}"
+            TextLayer="{x:Bind TextLayer, Mode=OneWay}"
+            Page="{x:Bind Page, Mode=OneWay}"/>
     </Canvas>
 </UserControl>
